--- a/angular.json
+++ b/angular.json
@@ -7,10 +7,13 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "universe",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "spec": false,
+          "changeDetection": "OnPush",
+          "viewEncapsulation": "ShadowDom"
         }
       },
       "architect": {
