--- a/package.json
+++ b/package.json
@@ -13,34 +13,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0-rc.2",
-    "@angular/common": "^8.0.0-rc.2",
-    "@angular/compiler": "^8.0.0-rc.2",
-    "@angular/core": "^8.0.0-rc.2",
-    "@angular/forms": "^8.0.0-rc.2",
-    "@angular/platform-browser": "^8.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^8.0.0-rc.2",
-    "@angular/platform-server": "^8.0.0-rc.2",
-    "@angular/router": "^8.0.0-rc.2",
-    "core-js": "^3.0.1",
-    "express": "^4.16.4",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/platform-server": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "core-js": "^3.1.3",
+    "express": "^4.17.1",
     "path": "^0.12.7",
-    "pg": "^7.8.2",
-    "rxjs": "^6.5.1",
+    "pg": "^7.11.0",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "^0.9.0"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.13.8",
-    "@angular-devkit/build-angular": "^0.800.0-rc.2",
-    "@angular-devkit/build-webpack": "^0.13.8",
-    "@angular-devkit/core": "^8.0.0-rc.2",
-    "@angular/cli": "^8.0.0-rc.2",
-    "@angular/compiler-cli": "^8.0.0-rc.2",
-    "@angular/language-service": "^8.0.0-rc.2",
-    "@types/jasmine": "^3.3.12",
+    "@angular-devkit/architect": "^0.13.9",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular-devkit/build-webpack": "^0.13.9",
+    "@angular-devkit/core": "^8.0.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^11.13.8",
+    "@types/node": "^11.13.13",
     "codelyzer": "^5.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
@@ -54,8 +54,8 @@
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~7.0.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
-    "webpack": "^4.30.0"
+    "typescript": "^3.5.1",
+    "webpack": "^4.32.2"
   },
   "engines": {
     "node": "10.15.3",
